modules/Farnsworth.output
Warnings:
---------
4 reduce/reduce conflicts

Conflicts:
----------
Conflict in state 46 between rule 21 and token '-' resolved as shift.
Conflict in state 46 between rule 21 and token '<' resolved as shift.
Conflict in state 46 between rule 21 and token '+' resolved as shift.
Conflict in state 46 between rule 21 and token '**' resolved as shift.
Conflict in state 46 between rule 21 and token '%' resolved as shift.
Conflict in state 46 between rule 21 and token '==' resolved as shift.
Conflict in state 46 between rule 21 and token '>=' resolved as shift.
Conflict in state 46 between rule 21 and token '^' resolved as shift.
Conflict in state 46 between rule 21 and token ' ' resolved as shift.
Conflict in state 46 between rule 21 and token '*' resolved as shift.
Conflict in state 46 between rule 21 and token 'per' resolved as shift.
Conflict in state 46 between rule 21 and token '>>' resolved as shift.
Conflict in state 46 between rule 21 and token '!=' resolved as shift.
Conflict in state 46 between rule 21 and token '/' resolved as shift.
Conflict in state 46 between rule 21 and token '->' resolved as shift.
Conflict in state 46 between rule 21 and token '<<' resolved as shift.
Conflict in state 46 between rule 21 and token '<=' resolved as shift.
Conflict in state 46 between rule 21 and token '<=>' resolved as shift.
Conflict in state 46 between rule 21 and token '>' resolved as shift.
Conflict in state 56 between rule 25 and token '-' resolved as reduce.
Conflict in state 56 between rule 25 and token '<' resolved as reduce.
Conflict in state 56 between rule 25 and token '+' resolved as reduce.
Conflict in state 56 between rule 25 and token '**' resolved as shift.
Conflict in state 56 between rule 25 and token '%' resolved as shift.
Conflict in state 56 between rule 25 and token '==' resolved as reduce.
Conflict in state 56 between rule 25 and token '>=' resolved as reduce.
Conflict in state 56 between rule 25 and token '^' resolved as shift.
Conflict in state 56 between rule 25 and token ' ' resolved as shift.
Conflict in state 56 between rule 25 and token '*' resolved as shift.
Conflict in state 56 between rule 25 and token 'per' resolved as shift.
Conflict in state 56 between rule 25 and token '>>' resolved as reduce.
Conflict in state 56 between rule 25 and token '!=' resolved as reduce.
Conflict in state 56 between rule 25 and token '/' resolved as shift.
Conflict in state 56 between rule 25 and token '->' resolved as reduce.
Conflict in state 56 between rule 25 and token '<<' resolved as reduce.
Conflict in state 56 between rule 25 and token '<=' resolved as reduce.
Conflict in state 56 between rule 25 and token '<=>' resolved as reduce.
Conflict in state 56 between rule 25 and token '>' resolved as reduce.
Conflict in state 57 between rule 35 and token '-' resolved as shift.
Conflict in state 57 between rule 35 and token '<' resolved as error.
Conflict in state 57 between rule 35 and token '+' resolved as shift.
Conflict in state 57 between rule 35 and token '**' resolved as shift.
Conflict in state 57 between rule 35 and token '%' resolved as shift.
Conflict in state 57 between rule 35 and token '==' resolved as error.
Conflict in state 57 between rule 35 and token '>=' resolved as error.
Conflict in state 57 between rule 35 and token '^' resolved as shift.
Conflict in state 57 between rule 35 and token ' ' resolved as shift.
Conflict in state 57 between rule 35 and token '*' resolved as shift.
Conflict in state 57 between rule 35 and token 'per' resolved as shift.
Conflict in state 57 between rule 35 and token '>>' resolved as shift.
Conflict in state 57 between rule 35 and token '!=' resolved as error.
Conflict in state 57 between rule 35 and token '/' resolved as shift.
Conflict in state 57 between rule 35 and token '->' resolved as reduce.
Conflict in state 57 between rule 35 and token '<<' resolved as shift.
Conflict in state 57 between rule 35 and token '<=' resolved as error.
Conflict in state 57 between rule 35 and token '<=>' resolved as error.
Conflict in state 57 between rule 35 and token '>' resolved as error.
Conflict in state 58 between rule 32 and token '-' resolved as reduce.
Conflict in state 58 between rule 32 and token '<' resolved as reduce.
Conflict in state 58 between rule 32 and token '+' resolved as reduce.
Conflict in state 58 between rule 32 and token '**' resolved as reduce.
Conflict in state 58 between rule 32 and token '%' resolved as reduce.
Conflict in state 58 between rule 32 and token '==' resolved as reduce.
Conflict in state 58 between rule 32 and token '>=' resolved as reduce.
Conflict in state 58 between rule 32 and token '^' resolved as reduce.
Conflict in state 58 between rule 32 and token ' ' resolved as reduce.
Conflict in state 58 between rule 32 and token '*' resolved as reduce.
Conflict in state 58 between rule 32 and token 'per' resolved as reduce.
Conflict in state 58 between rule 32 and token '>>' resolved as reduce.
Conflict in state 58 between rule 32 and token '!=' resolved as reduce.
Conflict in state 58 between rule 32 and token '/' resolved as reduce.
Conflict in state 58 between rule 32 and token '->' resolved as reduce.
Conflict in state 58 between rule 32 and token '<<' resolved as reduce.
Conflict in state 58 between rule 32 and token '<=' resolved as reduce.
Conflict in state 58 between rule 32 and token '<=>' resolved as reduce.
Conflict in state 58 between rule 32 and token '>' resolved as reduce.
Conflict in state 59 between rule 24 and token '-' resolved as reduce.
Conflict in state 59 between rule 24 and token '<' resolved as reduce.
Conflict in state 59 between rule 24 and token '+' resolved as reduce.
Conflict in state 59 between rule 24 and token '**' resolved as shift.
Conflict in state 59 between rule 24 and token '%' resolved as shift.
Conflict in state 59 between rule 24 and token '==' resolved as reduce.
Conflict in state 59 between rule 24 and token '>=' resolved as reduce.
Conflict in state 59 between rule 24 and token '^' resolved as shift.
Conflict in state 59 between rule 24 and token ' ' resolved as shift.
Conflict in state 59 between rule 24 and token '*' resolved as shift.
Conflict in state 59 between rule 24 and token 'per' resolved as shift.
Conflict in state 59 between rule 24 and token '>>' resolved as reduce.
Conflict in state 59 between rule 24 and token '!=' resolved as reduce.
Conflict in state 59 between rule 24 and token '/' resolved as shift.
Conflict in state 59 between rule 24 and token '->' resolved as reduce.
Conflict in state 59 between rule 24 and token '<<' resolved as reduce.
Conflict in state 59 between rule 24 and token '<=' resolved as reduce.
Conflict in state 59 between rule 24 and token '<=>' resolved as reduce.
Conflict in state 59 between rule 24 and token '>' resolved as reduce.
Conflict in state 60 between rule 30 and token '-' resolved as reduce.
Conflict in state 60 between rule 30 and token '<' resolved as reduce.
Conflict in state 60 between rule 30 and token '+' resolved as reduce.
Conflict in state 60 between rule 30 and token '**' resolved as shift.
Conflict in state 60 between rule 30 and token '%' resolved as reduce.
Conflict in state 60 between rule 30 and token '==' resolved as reduce.
Conflict in state 60 between rule 30 and token '>=' resolved as reduce.
Conflict in state 60 between rule 30 and token '^' resolved as shift.
Conflict in state 60 between rule 30 and token ' ' resolved as shift.
Conflict in state 60 between rule 30 and token '*' resolved as reduce.
Conflict in state 60 between rule 30 and token 'per' resolved as reduce.
Conflict in state 60 between rule 30 and token '>>' resolved as reduce.
Conflict in state 60 between rule 30 and token '!=' resolved as reduce.
Conflict in state 60 between rule 30 and token '/' resolved as reduce.
Conflict in state 60 between rule 30 and token '->' resolved as reduce.
Conflict in state 60 between rule 30 and token '<<' resolved as reduce.
Conflict in state 60 between rule 30 and token '<=' resolved as reduce.
Conflict in state 60 between rule 30 and token '<=>' resolved as reduce.
Conflict in state 60 between rule 30 and token '>' resolved as reduce.
Conflict in state 61 between rule 39 and token '-' resolved as shift.
Conflict in state 61 between rule 39 and token '<' resolved as error.
Conflict in state 61 between rule 39 and token '+' resolved as shift.
Conflict in state 61 between rule 39 and token '**' resolved as shift.
Conflict in state 61 between rule 39 and token '%' resolved as shift.
Conflict in state 61 between rule 39 and token '==' resolved as error.
Conflict in state 61 between rule 39 and token '>=' resolved as error.
Conflict in state 61 between rule 39 and token '^' resolved as shift.
Conflict in state 61 between rule 39 and token ' ' resolved as shift.
Conflict in state 61 between rule 39 and token '*' resolved as shift.
Conflict in state 61 between rule 39 and token 'per' resolved as shift.
Conflict in state 61 between rule 39 and token '>>' resolved as shift.
Conflict in state 61 between rule 39 and token '!=' resolved as error.
Conflict in state 61 between rule 39 and token '/' resolved as shift.
Conflict in state 61 between rule 39 and token '->' resolved as reduce.
Conflict in state 61 between rule 39 and token '<<' resolved as shift.
Conflict in state 61 between rule 39 and token '<=' resolved as error.
Conflict in state 61 between rule 39 and token '<=>' resolved as error.
Conflict in state 61 between rule 39 and token '>' resolved as error.
Conflict in state 62 between rule 38 and token '-' resolved as shift.
Conflict in state 62 between rule 38 and token '<' resolved as error.
Conflict in state 62 between rule 38 and token '+' resolved as shift.
Conflict in state 62 between rule 38 and token '**' resolved as shift.
Conflict in state 62 between rule 38 and token '%' resolved as shift.
Conflict in state 62 between rule 38 and token '==' resolved as error.
Conflict in state 62 between rule 38 and token '>=' resolved as error.
Conflict in state 62 between rule 38 and token '^' resolved as shift.
Conflict in state 62 between rule 38 and token ' ' resolved as shift.
Conflict in state 62 between rule 38 and token '*' resolved as shift.
Conflict in state 62 between rule 38 and token 'per' resolved as shift.
Conflict in state 62 between rule 38 and token '>>' resolved as shift.
Conflict in state 62 between rule 38 and token '!=' resolved as error.
Conflict in state 62 between rule 38 and token '/' resolved as shift.
Conflict in state 62 between rule 38 and token '->' resolved as reduce.
Conflict in state 62 between rule 38 and token '<<' resolved as shift.
Conflict in state 62 between rule 38 and token '<=' resolved as error.
Conflict in state 62 between rule 38 and token '<=>' resolved as error.
Conflict in state 62 between rule 38 and token '>' resolved as error.
Conflict in state 63 between rule 31 and token '-' resolved as reduce.
Conflict in state 63 between rule 31 and token '<' resolved as reduce.
Conflict in state 63 between rule 31 and token '+' resolved as reduce.
Conflict in state 63 between rule 31 and token '**' resolved as reduce.
Conflict in state 63 between rule 31 and token '%' resolved as reduce.
Conflict in state 63 between rule 31 and token '==' resolved as reduce.
Conflict in state 63 between rule 31 and token '>=' resolved as reduce.
Conflict in state 63 between rule 31 and token '^' resolved as reduce.
Conflict in state 63 between rule 31 and token ' ' resolved as reduce.
Conflict in state 63 between rule 31 and token '*' resolved as reduce.
Conflict in state 63 between rule 31 and token 'per' resolved as reduce.
Conflict in state 63 between rule 31 and token '>>' resolved as reduce.
Conflict in state 63 between rule 31 and token '!=' resolved as reduce.
Conflict in state 63 between rule 31 and token '/' resolved as reduce.
Conflict in state 63 between rule 31 and token '->' resolved as reduce.
Conflict in state 63 between rule 31 and token '<<' resolved as reduce.
Conflict in state 63 between rule 31 and token '<=' resolved as reduce.
Conflict in state 63 between rule 31 and token '<=>' resolved as reduce.
Conflict in state 63 between rule 31 and token '>' resolved as reduce.
Conflict in state 64 between rule 26 and token '-' resolved as reduce.
Conflict in state 64 between rule 26 and token '<' resolved as reduce.
Conflict in state 64 between rule 26 and token '+' resolved as reduce.
Conflict in state 64 between rule 26 and token '**' resolved as shift.
Conflict in state 64 between rule 26 and token '%' resolved as reduce.
Conflict in state 64 between rule 26 and token '==' resolved as reduce.
Conflict in state 64 between rule 26 and token '>=' resolved as reduce.
Conflict in state 64 between rule 26 and token '^' resolved as shift.
Conflict in state 64 between rule 26 and token ' ' resolved as reduce.
Conflict in state 64 between rule 26 and token '*' resolved as reduce.
Conflict in state 64 between rule 26 and token 'per' resolved as reduce.
Conflict in state 64 between rule 26 and token '>>' resolved as reduce.
Conflict in state 64 between rule 26 and token '!=' resolved as reduce.
Conflict in state 64 between rule 26 and token '/' resolved as reduce.
Conflict in state 64 between rule 26 and token '->' resolved as reduce.
Conflict in state 64 between rule 26 and token '<<' resolved as reduce.
Conflict in state 64 between rule 26 and token '<=' resolved as reduce.
Conflict in state 64 between rule 26 and token '<=>' resolved as reduce.
Conflict in state 64 between rule 26 and token '>' resolved as reduce.
Conflict in state 65 between rule 27 and token '-' resolved as reduce.
Conflict in state 65 between rule 27 and token '<' resolved as reduce.
Conflict in state 65 between rule 27 and token '+' resolved as reduce.
Conflict in state 65 between rule 27 and token '**' resolved as shift.
Conflict in state 65 between rule 27 and token '%' resolved as reduce.
Conflict in state 65 between rule 27 and token '==' resolved as reduce.
Conflict in state 65 between rule 27 and token '>=' resolved as reduce.
Conflict in state 65 between rule 27 and token '^' resolved as shift.
Conflict in state 65 between rule 27 and token ' ' resolved as shift.
Conflict in state 65 between rule 27 and token '*' resolved as reduce.
Conflict in state 65 between rule 27 and token 'per' resolved as reduce.
Conflict in state 65 between rule 27 and token '>>' resolved as reduce.
Conflict in state 65 between rule 27 and token '!=' resolved as reduce.
Conflict in state 65 between rule 27 and token '/' resolved as reduce.
Conflict in state 65 between rule 27 and token '->' resolved as reduce.
Conflict in state 65 between rule 27 and token '<<' resolved as reduce.
Conflict in state 65 between rule 27 and token '<=' resolved as reduce.
Conflict in state 65 between rule 27 and token '<=>' resolved as reduce.
Conflict in state 65 between rule 27 and token '>' resolved as reduce.
Conflict in state 66 between rule 29 and token '-' resolved as reduce.
Conflict in state 66 between rule 29 and token '<' resolved as reduce.
Conflict in state 66 between rule 29 and token '+' resolved as reduce.
Conflict in state 66 between rule 29 and token '**' resolved as shift.
Conflict in state 66 between rule 29 and token '%' resolved as shift.
Conflict in state 66 between rule 29 and token '==' resolved as reduce.
Conflict in state 66 between rule 29 and token '>=' resolved as reduce.
Conflict in state 66 between rule 29 and token '^' resolved as shift.
Conflict in state 66 between rule 29 and token ' ' resolved as shift.
Conflict in state 66 between rule 29 and token '*' resolved as shift.
Conflict in state 66 between rule 29 and token 'per' resolved as reduce.
Conflict in state 66 between rule 29 and token '>>' resolved as reduce.
Conflict in state 66 between rule 29 and token '!=' resolved as reduce.
Conflict in state 66 between rule 29 and token '/' resolved as shift.
Conflict in state 66 between rule 29 and token '->' resolved as reduce.
Conflict in state 66 between rule 29 and token '<<' resolved as reduce.
Conflict in state 66 between rule 29 and token '<=' resolved as reduce.
Conflict in state 66 between rule 29 and token '<=>' resolved as reduce.
Conflict in state 66 between rule 29 and token '>' resolved as reduce.
Conflict in state 68 between rule 33 and token '-' resolved as shift.
Conflict in state 68 between rule 33 and token '<' resolved as reduce.
Conflict in state 68 between rule 33 and token '+' resolved as shift.
Conflict in state 68 between rule 33 and token '**' resolved as shift.
Conflict in state 68 between rule 33 and token '%' resolved as shift.
Conflict in state 68 between rule 33 and token '==' resolved as reduce.
Conflict in state 68 between rule 33 and token '>=' resolved as reduce.
Conflict in state 68 between rule 33 and token '^' resolved as shift.
Conflict in state 68 between rule 33 and token ' ' resolved as shift.
Conflict in state 68 between rule 33 and token '*' resolved as shift.
Conflict in state 68 between rule 33 and token 'per' resolved as shift.
Conflict in state 68 between rule 33 and token '>>' resolved as reduce.
Conflict in state 68 between rule 33 and token '!=' resolved as reduce.
Conflict in state 68 between rule 33 and token '/' resolved as shift.
Conflict in state 68 between rule 33 and token '->' resolved as reduce.
Conflict in state 68 between rule 33 and token '<<' resolved as reduce.
Conflict in state 68 between rule 33 and token '<=' resolved as reduce.
Conflict in state 68 between rule 33 and token '<=>' resolved as reduce.
Conflict in state 68 between rule 33 and token '>' resolved as reduce.
Conflict in state 69 between rule 41 and token '-' resolved as shift.
Conflict in state 69 between rule 41 and token '<' resolved as error.
Conflict in state 69 between rule 41 and token '+' resolved as shift.
Conflict in state 69 between rule 41 and token '**' resolved as shift.
Conflict in state 69 between rule 41 and token '%' resolved as shift.
Conflict in state 69 between rule 41 and token '==' resolved as error.
Conflict in state 69 between rule 41 and token '>=' resolved as error.
Conflict in state 69 between rule 41 and token '^' resolved as shift.
Conflict in state 69 between rule 41 and token ' ' resolved as shift.
Conflict in state 69 between rule 41 and token '*' resolved as shift.
Conflict in state 69 between rule 41 and token 'per' resolved as shift.
Conflict in state 69 between rule 41 and token '>>' resolved as shift.
Conflict in state 69 between rule 41 and token '!=' resolved as error.
Conflict in state 69 between rule 41 and token '/' resolved as shift.
Conflict in state 69 between rule 41 and token '->' resolved as reduce.
Conflict in state 69 between rule 41 and token '<<' resolved as shift.
Conflict in state 69 between rule 41 and token '<=' resolved as error.
Conflict in state 69 between rule 41 and token '<=>' resolved as error.
Conflict in state 69 between rule 41 and token '>' resolved as error.
Conflict in state 70 between rule 23 and token '-' resolved as shift.
Conflict in state 70 between rule 23 and token '<' resolved as shift.
Conflict in state 70 between rule 23 and token '+' resolved as shift.
Conflict in state 70 between rule 23 and token '**' resolved as shift.
Conflict in state 70 between rule 23 and token '%' resolved as shift.
Conflict in state 70 between rule 23 and token '==' resolved as shift.
Conflict in state 70 between rule 23 and token '>=' resolved as shift.
Conflict in state 70 between rule 23 and token '^' resolved as shift.
Conflict in state 70 between rule 23 and token ' ' resolved as shift.
Conflict in state 70 between rule 23 and token '*' resolved as shift.
Conflict in state 70 between rule 23 and token 'per' resolved as shift.
Conflict in state 70 between rule 23 and token '>>' resolved as shift.
Conflict in state 70 between rule 23 and token '!=' resolved as shift.
Conflict in state 70 between rule 23 and token '/' resolved as shift.
Conflict in state 70 between rule 23 and token '->' resolved as reduce.
Conflict in state 70 between rule 23 and token '<<' resolved as shift.
Conflict in state 70 between rule 23 and token '<=' resolved as shift.
Conflict in state 70 between rule 23 and token '<=>' resolved as shift.
Conflict in state 70 between rule 23 and token '>' resolved as shift.
Conflict in state 71 between rule 28 and token '-' resolved as reduce.
Conflict in state 71 between rule 28 and token '<' resolved as reduce.
Conflict in state 71 between rule 28 and token '+' resolved as reduce.
Conflict in state 71 between rule 28 and token '**' resolved as shift.
Conflict in state 71 between rule 28 and token '%' resolved as reduce.
Conflict in state 71 between rule 28 and token '==' resolved as reduce.
Conflict in state 71 between rule 28 and token '>=' resolved as reduce.
Conflict in state 71 between rule 28 and token '^' resolved as shift.
Conflict in state 71 between rule 28 and token ' ' resolved as shift.
Conflict in state 71 between rule 28 and token '*' resolved as reduce.
Conflict in state 71 between rule 28 and token 'per' resolved as reduce.
Conflict in state 71 between rule 28 and token '>>' resolved as reduce.
Conflict in state 71 between rule 28 and token '!=' resolved as reduce.
Conflict in state 71 between rule 28 and token '/' resolved as reduce.
Conflict in state 71 between rule 28 and token '->' resolved as reduce.
Conflict in state 71 between rule 28 and token '<<' resolved as reduce.
Conflict in state 71 between rule 28 and token '<=' resolved as reduce.
Conflict in state 71 between rule 28 and token '<=>' resolved as reduce.
Conflict in state 71 between rule 28 and token '>' resolved as reduce.
Conflict in state 72 between rule 34 and token '-' resolved as shift.
Conflict in state 72 between rule 34 and token '<' resolved as reduce.
Conflict in state 72 between rule 34 and token '+' resolved as shift.
Conflict in state 72 between rule 34 and token '**' resolved as shift.
Conflict in state 72 between rule 34 and token '%' resolved as shift.
Conflict in state 72 between rule 34 and token '==' resolved as reduce.
Conflict in state 72 between rule 34 and token '>=' resolved as reduce.
Conflict in state 72 between rule 34 and token '^' resolved as shift.
Conflict in state 72 between rule 34 and token ' ' resolved as shift.
Conflict in state 72 between rule 34 and token '*' resolved as shift.
Conflict in state 72 between rule 34 and token 'per' resolved as shift.
Conflict in state 72 between rule 34 and token '>>' resolved as reduce.
Conflict in state 72 between rule 34 and token '!=' resolved as reduce.
Conflict in state 72 between rule 34 and token '/' resolved as shift.
Conflict in state 72 between rule 34 and token '->' resolved as reduce.
Conflict in state 72 between rule 34 and token '<<' resolved as reduce.
Conflict in state 72 between rule 34 and token '<=' resolved as reduce.
Conflict in state 72 between rule 34 and token '<=>' resolved as reduce.
Conflict in state 72 between rule 34 and token '>' resolved as reduce.
Conflict in state 73 between rule 40 and token '-' resolved as shift.
Conflict in state 73 between rule 40 and token '<' resolved as error.
Conflict in state 73 between rule 40 and token '+' resolved as shift.
Conflict in state 73 between rule 40 and token '**' resolved as shift.
Conflict in state 73 between rule 40 and token '%' resolved as shift.
Conflict in state 73 between rule 40 and token '==' resolved as error.
Conflict in state 73 between rule 40 and token '>=' resolved as error.
Conflict in state 73 between rule 40 and token '^' resolved as shift.
Conflict in state 73 between rule 40 and token ' ' resolved as shift.
Conflict in state 73 between rule 40 and token '*' resolved as shift.
Conflict in state 73 between rule 40 and token 'per' resolved as shift.
Conflict in state 73 between rule 40 and token '>>' resolved as shift.
Conflict in state 73 between rule 40 and token '!=' resolved as error.
Conflict in state 73 between rule 40 and token '/' resolved as shift.
Conflict in state 73 between rule 40 and token '->' resolved as reduce.
Conflict in state 73 between rule 40 and token '<<' resolved as shift.
Conflict in state 73 between rule 40 and token '<=' resolved as error.
Conflict in state 73 between rule 40 and token '<=>' resolved as error.
Conflict in state 73 between rule 40 and token '>' resolved as error.
Conflict in state 74 between rule 37 and token '-' resolved as shift.
Conflict in state 74 between rule 37 and token '<' resolved as error.
Conflict in state 74 between rule 37 and token '+' resolved as shift.
Conflict in state 74 between rule 37 and token '**' resolved as shift.
Conflict in state 74 between rule 37 and token '%' resolved as shift.
Conflict in state 74 between rule 37 and token '==' resolved as error.
Conflict in state 74 between rule 37 and token '>=' resolved as error.
Conflict in state 74 between rule 37 and token '^' resolved as shift.
Conflict in state 74 between rule 37 and token ' ' resolved as shift.
Conflict in state 74 between rule 37 and token '*' resolved as shift.
Conflict in state 74 between rule 37 and token 'per' resolved as shift.
Conflict in state 74 between rule 37 and token '>>' resolved as shift.
Conflict in state 74 between rule 37 and token '!=' resolved as error.
Conflict in state 74 between rule 37 and token '/' resolved as shift.
Conflict in state 74 between rule 37 and token '->' resolved as reduce.
Conflict in state 74 between rule 37 and token '<<' resolved as shift.
Conflict in state 74 between rule 37 and token '<=' resolved as error.
Conflict in state 74 between rule 37 and token '<=>' resolved as error.
Conflict in state 74 between rule 37 and token '>' resolved as error.
Conflict in state 75 between rule 36 and token '-' resolved as shift.
Conflict in state 75 between rule 36 and token '<' resolved as error.
Conflict in state 75 between rule 36 and token '+' resolved as shift.
Conflict in state 75 between rule 36 and token '**' resolved as shift.
Conflict in state 75 between rule 36 and token '%' resolved as shift.
Conflict in state 75 between rule 36 and token '==' resolved as error.
Conflict in state 75 between rule 36 and token '>=' resolved as error.
Conflict in state 75 between rule 36 and token '^' resolved as shift.
Conflict in state 75 between rule 36 and token ' ' resolved as shift.
Conflict in state 75 between rule 36 and token '*' resolved as shift.
Conflict in state 75 between rule 36 and token 'per' resolved as shift.
Conflict in state 75 between rule 36 and token '>>' resolved as shift.
Conflict in state 75 between rule 36 and token '!=' resolved as error.
Conflict in state 75 between rule 36 and token '/' resolved as shift.
Conflict in state 75 between rule 36 and token '->' resolved as reduce.
Conflict in state 75 between rule 36 and token '<<' resolved as shift.
Conflict in state 75 between rule 36 and token '<=' resolved as error.
Conflict in state 75 between rule 36 and token '<=>' resolved as error.
Conflict in state 75 between rule 36 and token '>' resolved as error.
Conflict in state 87 between rule 21 and token '-' resolved as shift.
Conflict in state 87 between rule 21 and token '<' resolved as shift.
Conflict in state 87 between rule 21 and token '+' resolved as shift.
Conflict in state 87 between rule 21 and token '**' resolved as shift.
Conflict in state 87 between rule 21 and token '%' resolved as shift.
Conflict in state 87 between rule 21 and token '==' resolved as shift.
Conflict in state 87 between rule 21 and token '>=' resolved as shift.
Conflict in state 87 between rule 21 and token '^' resolved as shift.
Conflict in state 87 between rule 21 and token ' ' resolved as shift.
Conflict in state 87 between rule 21 and token '*' resolved as shift.
Conflict in state 87 between rule 21 and token 'per' resolved as shift.
Conflict in state 87 between rule 21 and token '>>' resolved as shift.
Conflict in state 87 between rule 21 and token '!=' resolved as shift.
Conflict in state 87 between rule 21 and token '/' resolved as shift.
Conflict in state 87 between rule 21 and token '->' resolved as shift.
Conflict in state 87 between rule 21 and token '<<' resolved as shift.
Conflict in state 87 between rule 21 and token '<=' resolved as shift.
Conflict in state 87 between rule 21 and token '<=>' resolved as shift.
Conflict in state 87 between rule 21 and token '>' resolved as shift.
State 49 contains 2 reduce/reduce conflicts
State 87 contains 2 reduce/reduce conflicts

Rules:
------
0:	$start -> stma $end
1:	stma -> /* empty */
2:	stma -> stmt
3:	stma -> stmt ';' stma
4:	stmt -> expr
5:	stmt -> NAME '[' arglist ']' ':=' expr
6:	stmt -> NAME ':=' expr
7:	stmt -> expr ':->' expr
8:	array -> expr ',' array
9:	array -> expr
10:	argelement -> NAME 'isa' NAME '=' expr
11:	argelement -> NAME 'isa' NAME
12:	argelement -> NAME '=' expr
13:	argelement -> NAME
14:	arglist -> argelement ',' arglist
15:	arglist -> argelement
16:	expr -> NUMBER
17:	expr -> NAME
18:	expr -> DATE
19:	expr -> STRING
20:	expr -> '-' NAME
21:	expr -> NAME '=' expr
22:	expr -> NUMBER NAME
23:	expr -> expr '->' expr
24:	expr -> expr '+' expr
25:	expr -> expr '-' expr
26:	expr -> expr ' ' expr
27:	expr -> expr '*' expr
28:	expr -> expr '/' expr
29:	expr -> expr 'per' expr
30:	expr -> expr '%' expr
31:	expr -> expr '^' expr
32:	expr -> expr '**' expr
33:	expr -> expr '>>' expr
34:	expr -> expr '<<' expr
35:	expr -> expr '<' expr
36:	expr -> expr '>' expr
37:	expr -> expr '<=' expr
38:	expr -> expr '>=' expr
39:	expr -> expr '==' expr
40:	expr -> expr '<=>' expr
41:	expr -> expr '!=' expr
42:	expr -> NAME '[' array ']'
43:	expr -> '[' array ']'
44:	expr -> '(' expr ')'
45:	expr -> '{' '|' arglist '|' expr '}'
46:	expr -> ' '

States:
-------
State 0:

	$start -> . stma $end	(Rule 0)

	' '	shift, and go to state 8
	'('	shift, and go to state 9
	'-'	shift, and go to state 1
	'['	shift, and go to state 11
	'{'	shift, and go to state 5
	DATE	shift, and go to state 4
	NAME	shift, and go to state 2
	NUMBER	shift, and go to state 12
	STRING	shift, and go to state 6

	$default	reduce using rule 1 (stma)

	stmt	go to state 7
	expr	go to state 10
	stma	go to state 3

State 1:

	expr -> '-' . NAME	(Rule 20)

	NAME	shift, and go to state 13

State 2:

	stmt -> NAME . '[' arglist ']' ':=' expr	(Rule 5)
	stmt -> NAME . ':=' expr	(Rule 6)
	expr -> NAME .	(Rule 17)
	expr -> NAME . '=' expr	(Rule 21)
	expr -> NAME . '[' array ']'	(Rule 42)

	':='	shift, and go to state 14
	'='	shift, and go to state 15
	'['	shift, and go to state 16

	$default	reduce using rule 17 (expr)

State 3:

	$start -> stma . $end	(Rule 0)

	$end	shift, and go to state 17

State 4:

	expr -> DATE .	(Rule 18)

	$default	reduce using rule 18 (expr)

State 5:

	expr -> '{' . '|' arglist '|' expr '}'	(Rule 45)

	'|'	shift, and go to state 18

State 6:

	expr -> STRING .	(Rule 19)

	$default	reduce using rule 19 (expr)

State 7:

	stma -> stmt .	(Rule 2)
	stma -> stmt . ';' stma	(Rule 3)

	';'	shift, and go to state 19

	$default	reduce using rule 2 (stma)

State 8:

	expr -> ' ' .	(Rule 46)

	$default	reduce using rule 46 (expr)

State 9:

	expr -> '(' . expr ')'	(Rule 44)

	' '	shift, and go to state 8
	'('	shift, and go to state 9
	'-'	shift, and go to state 1
	'['	shift, and go to state 11
	'{'	shift, and go to state 5
	DATE	shift, and go to state 4
	NAME	shift, and go to state 20
	NUMBER	shift, and go to state 12
	STRING	shift, and go to state 6

	expr	go to state 21

State 10:

	stmt -> expr .	(Rule 4)
	stmt -> expr . ':->' expr	(Rule 7)
	expr -> expr . '->' expr	(Rule 23)
	expr -> expr . '+' expr	(Rule 24)
	expr -> expr . '-' expr	(Rule 25)
	expr -> expr . ' ' expr	(Rule 26)
	expr -> expr . '*' expr	(Rule 27)
	expr -> expr . '/' expr	(Rule 28)
	expr -> expr . 'per' expr	(Rule 29)
	expr -> expr . '%' expr	(Rule 30)
	expr -> expr . '^' expr	(Rule 31)
	expr -> expr . '**' expr	(Rule 32)
	expr -> expr . '>>' expr	(Rule 33)
	expr -> expr . '<<' expr	(Rule 34)
	expr -> expr . '<' expr	(Rule 35)
	expr -> expr . '>' expr	(Rule 36)
	expr -> expr . '<=' expr	(Rule 37)
	expr -> expr . '>=' expr	(Rule 38)
	expr -> expr . '==' expr	(Rule 39)
	expr -> expr . '<=>' expr	(Rule 40)
	expr -> expr . '!=' expr	(Rule 41)
